src/test/deca/syntax/invalid/wrong_decl7.deca
//Description
//    Vérifier la decl de var
//
//Résultats :
//    Erreur Syntaxique ligne 8
//


{
float else = 3.0;
}
